# flaketill-says

./: .gitignore  .package  .todo2  .travis.yml  AUTHORS.md  COPYNG  HACKING.md  MANIFEST.in  Makefile.am  NEWS.md  README.md  THANKS.md  TODO.md  appveyor.yml  autogen.sh  bootstrap  configure  configure.ac  dev-arch-dependencies.yml  dev-pip-dependencies.txt  flaketill-says.1  flaketill-says.pc.in  local  meta.yaml  requirements-dev-archlinux.txt  share
src/: .coverage  .stow-local-ignore  Dockerfile  Doxyfile  Doxyfile.bak  Gruntfile.js  Makefile.am  Vagrantfile  activate.sh  appveyor.yml  bootstrap  develop-requirements.txt  docker-compose.yml  humans.txt  main.py  package.json  requirements-linux.txt  requirements-windows.txt  requirements.txt  setup.py  tox.ini
src/doc/html/: index.html  navtreedata.js
src/doc/latex/: refman.tex
src/dotfiles/: .stowrc
src/dotfiles/.config/fish/: config.fish
src/dotfiles/.config/fish/functions/: la.fish  ls.fish
src/dotfiles/bash/: .bash_profile  .bashrc
src/dotfiles/doxygen/: Doxyfile  Doxyfile.bak
src/dotfiles/git/: .gitconfig
src/dotfiles/ssh/.ssh/: config
src/environments/common/: .travis.yml  README.rst  version  version.h
src/environments/installers-tools/nsis/: flaketill-says.in  flaketill-says.nsi
src/environments/vagrant/linux/archx64/: setup.sh
src/environments/vagrant/linux/archx64/config/: nginx_vhost
src/environments/vagrant/linux/toolbox/: install_vgrant_arch_x64.sh
src/environments/vagrant/linux/ubuntu-trusty64/: setup.sh
src/flaketill-shell/scripts/: boilerplate-proyect.sh  git-ssh-setup.sh  helper-test.sh
src/share/applications/: flaketill-says.desktop
src/share/locale/po /: template.pot
src/share/man/man1/: flaketill-says.1
src/test/: test-git
src/test/scripts/: .travis.yml  script.sh
src/test/selenium/: test.js
src/test/unit/: test.js
test/: Makefile.am  main.yml  manpage_test.sh
