# Copyright (C) 2006, 2009 Free Software Foundation, Inc.
# This Makefile.am is free software; the Free Software Foundation
# gives unlimited permission to copy, distribute and modify it.

EXTRA_DIST = $(wildcard *.sh) $(wildcard *.man)

#bin_PROGRAMS = flaketill-says
#flaketill-says_SOURCES = flaketill-says

bin_SCRIPTS = flaketill-says

sbin_SCRIPTS = flaketillsays-helpers.sh

# installing man pages
man1_MANS = flaketill-says.1

